# CoreGuard-Android

./: .gitignore  AGENTS.md  LICENSE  README.md  SECURITY.md  SKILL.md  UI_MERGE_AUDIT.md  build.gradle.kts  keystore.properties.example  release.sh  settings.gradle.kts  skills-lock.json
.agents/skills/expo-native-ui/: SKILL.md
.github/: dependabot.yml
.github/workflows/: android.yml  copilot-setup-steps.yml  release.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/ioc/: spyware_iocs.json
app/src/main/cpp/: CMakeLists.txt  tamperguard.cpp
app/src/main/res/anim/: fade_up_delayed.xml
app/src/main/res/drawable/: bg_azure_pewter.xml  bg_gold_glow_card.xml  ic_pentacle.xml  (+5 more)
billing-server/: README.md  build.gradle.kts
cli/: README.md  go.mod
cli/cmd/coreguard/: main.go
cli/internal/cmd/: root.go  root_test.go
cli/internal/sim/: attack.go  defense.go  engine.go  engine_test.go  events.go  graph.go  mst.go
docs/: CoreGuard_Elite_Copilot_SRD.md  LAUNCH_GATE_FAST.md  NEMESIS_SCANNER.md  NETWORK_DEFENSE_LAB.md  PEGASUS_SCANNER.md  PLAYSTORE_LAUNCH_GUIDE.md  PLAY_CONSOLE_BILLING.md  PLAY_STORE_LAUNCH.md  PRIVACY_POLICY.md  RELEASE_READINESS.md  SECURITY_BASELINE.md  THREAT_MODEL.md  TODO_MERGE_CHECKLIST.md
docs/store-listing/: README.md
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
preview/: index.html  paywall.html  security.html
scripts/: README.md  generate_coreguard_handoff.py  play_pipeline.sh
tools/: generate_coreguard_elite_handoff.py  generate_coreguard_srd.py
(+109 files in other folders)
